Add gc-java8-UseConcMarkSweepGC.log